--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -12,12 +12,16 @@
     "@koa/cors": "^3.1.0",
     "@koa/router": "^10.1.1",
     "dotenv": "^16.0.0",
-    "koa": "^2.13.4"
+    "http-status-codes": "^2.2.0",
+    "koa": "^2.13.4",
+    "koa2-swagger-ui": "^5.3.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/koa": "^2.13.4",
-    "@types/koa-router": "^7.4.4",
     "@types/koa__cors": "^3.1.1",
+    "@types/koa__router": "^8.0.11",
+    "@types/yup": "^0.29.13",
     "mocha": "^9.2.1",
     "nodemon": "^2.0.15",
     "prisma": "^3.9.2",
