--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   ],
   "scripts": {
     "start:api": "yarn --cwd packages/backend dev",
-    "start:ui": "yarn --cwd packages/frontend start"
+    "start:ui": "yarn --cwd packages/frontend start",
+    "gen-types:api": "yarn --cwd packages/backend generate",
+    "migrate:db": "yarn --cwd packages/backend migrate"
   },
   "devDependencies": {
     "@types/node": "^17.0.19",
