--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,11 +6,16 @@
   "scripts": {
     "dev": "nodemon -L src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "generate": "npx prisma generate",
+    "format": "npx prisma format",
+    "migrate": "npx prisma migrate deploy",
+    "migrate:dev": "npx prisma migrate dev"
   },
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "@koa/router": "^10.1.1",
+    "@prisma/client": "^3.9.2",
     "dotenv": "^16.0.0",
     "http-status-codes": "^2.2.0",
     "koa": "^2.13.4",
