--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "license": "MIT",
   "private": true,
+  "prisma": {
+    "seed": "ts-node prisma/seed/index.ts"
+  },
   "scripts": {
     "dev": "nodemon -L src/server.ts",
     "build": "tsc",
@@ -10,7 +13,8 @@
     "generate": "npx prisma generate",
     "format": "npx prisma format",
     "migrate": "npx prisma migrate deploy",
-    "migrate:dev": "npx prisma migrate dev"
+    "migrate:dev": "npx prisma migrate dev",
+    "seed": "prisma db seed"
   },
   "dependencies": {
     "@koa/cors": "^3.1.0",
