--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -7,7 +7,7 @@
     "seed": "ts-node prisma/seed/index.ts"
   },
   "scripts": {
-    "dev": "nodemon -L src/server.ts",
+    "dev": "yarn gen-swagger && nodemon -L src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "generate": "npx prisma generate",
@@ -15,19 +15,22 @@
     "migrate": "npx prisma migrate deploy",
     "migrate:dev": "npx prisma migrate dev",
     "seed": "prisma db seed",
-    "test": "jest -i --watchAll"
+    "test": "jest -i --watchAll",
+    "gen-swagger": "ts-node scripts/prepareSwaggerDefinition"
   },
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "@koa/router": "^10.1.1",
     "@prisma/client": "^3.10.0",
     "dotenv": "^16.0.0",
+    "glob": "^7.2.0",
     "http-status-codes": "^2.2.0",
     "koa": "^2.13.4",
     "koa2-swagger-ui": "^5.3.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/glob": "^7.2.0",
     "@types/jest": "^27.4.1",
     "@types/koa": "^2.13.4",
     "@types/koa__cors": "^3.1.1",
