--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -26,6 +26,7 @@
     "glob": "^7.2.0",
     "http-status-codes": "^2.2.0",
     "koa": "^2.13.4",
+    "koa-bodyparser": "^4.3.0",
     "koa2-swagger-ui": "^5.3.0",
     "yup": "^0.32.11"
   },
@@ -33,6 +34,7 @@
     "@types/glob": "^7.2.0",
     "@types/jest": "^27.4.1",
     "@types/koa": "^2.13.4",
+    "@types/koa-bodyparser": "^4.3.5",
     "@types/koa__cors": "^3.1.1",
     "@types/koa__router": "^8.0.11",
     "@types/yup": "^0.29.13",
