--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start:api": "yarn --cwd packages/backend dev",
     "start:ui": "yarn --cwd packages/frontend start",
     "gen-types:api": "yarn --cwd packages/backend generate",
+    "gen-swagger:api": "yarn --cwd packages/backend gen-swagger",
     "migrate:db": "yarn --cwd packages/backend migrate",
     "seed:db": "yarn --cwd packages/backend seed"
   },
