--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,6 +16,7 @@
     "@formatjs/intl": "^2.0.0",
     "antd": "^4.18.9",
     "axios": "^0.26.0",
+    "clsx": "^1.1.1",
     "orval": "^6.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
